[package]
name = "local-hyperrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
skar-client = "0.16"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
