[package]
name = "local-hyperrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
skar-format = "0.2"
skar-net-types = "0.2"
skar-schema = "0.1"
arrayvec = "0.7"
futures = "0.3"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
skar-client = "0.16"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
rayon = "1"
thiserror = "1"
url = { version = "2", features = ["serde"] }
rand = "0.8"
fastrange-rs = "0.1"
simd-json = "0.13.4"
arrow2 = { version = "0.18" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "gzip"]

[dev-dependencies]
hex-literal = "0.4"
